--- a/app/views/shared/_team_icon.html.erb
+++ b/app/views/shared/_team_icon.html.erb
@@ -1,4 +1,4 @@
 <div class="icon">
   <%=small_team_image_link team_icon %>
-  <span><%=link_to team_icon.shortname, team_view_path(team_icon.id)%></span>
+  <span><%=link_to h(team_icon.shortname), team_view_path(team_icon.id)%></span>
 </div>
