--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -13,54 +13,63 @@
 <div id="left_content">
 <div class="seperateLine"></div>
 
-<div class="tab_container" style="margin:10px 0 10px 0">
-  <span class="tab_link" style="margin-left: 10px;">队伍信息</span>
-  
-  <span style="margin:70px;">
-  <%if logged_in? %>
-  <%if current_user.is_team_member_of?(@team)%>
-    <%= link_to(image_tag("quitFromTeam.gif", :title=>"退出球队", :class=>"shortcut_icon"), team_join_path(@user_team.id),:method=>:delete)%>
-  <%else%>
-    <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"申请加入球队", :class=>"shortcut_icon"), '#', :onclick=>'javascript:j("#send_team_join_request_div").dialog("open");return false;')%>
-  <%end%>
-  <%end%>
-  <%if logged_in? && current_user.is_team_admin_of?(@team)%>
-    <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请朋友加入", :class=>"shortcut_icon"), new_team_team_join_invitation_path(@team))%>
-  <%end%>
-  <%if logged_in? && current_user.can_invite_team?(@team) %>
-    <%=link_to(image_tag("inviteMacth.gif", :title=>"邀请该队参加比赛", :class=>"shortcut_icon"), new_match_invitation_path(:guest_team_id=>@team))%>
-  <%end%>
-  </span>
+<%if @team_join_request != nil%>
+  <span>已申请加入<%=h @team.shortname%>, 等待确认</span>
+<%end%>
 
-  <div class="tab" style="margin-right:40px">
+<%if @team_join_invitation != nil%>
+  <span><%=h @team.shortname%>邀请你加入</span>
+  <%= link_to '接受', team_joins_path(:id=>@team_join_invitation.id, :back_uri => request.request_uri), :method => :post %>
+    <%= link_to '拒绝', team_join_invitation_path(@team_join_invitation.id), :method => :delete %>
+<%end%>
+
+<div class="tab_container" style="margin:10px 0 10px 0">
+  <%if logged_in? %>
+    <span class="shortcut">
+    <%if @can_quit%>
+      <%= link_to(image_tag("quitFromTeam.gif", :title=>"退出球队"), team_join_path(@user_team.id),:method=>:delete)%>
+    <%elsif @can_request%>
+      <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"申请加入球队"), '#', :onclick=>'javascript:j("#send_team_join_request_div").dialog("open");return false;')%>
+    <%end%>
+    <%if current_user.is_team_admin_of?(@team)%>
+      <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请朋友加入"), new_team_team_join_invitation_path(@team))%>
+    <%end%>
+    <%if logged_in? && current_user.can_invite_team?(@team) %>
+      <%=link_to(image_tag("inviteMacth.gif", :title=>"邀请该队参加比赛"), new_match_invitation_path(:guest_team_id=>@team))%>
+    <%end%>
+    </span>
+  <%end%>
+
+  <span class="tab_link" style="margin-left: 10px;">队伍信息</span>
+  <div class="tab">
   <%= "<span>球队全名: #{h @team.name}</span><br/>" unless @team.name.blank?%>
   <%= "<span>所在地: #{@team.city_text}</span><br/>" unless @team.city_text.nil?%>
   <%= "<span>建队时间: #{@team.found_time}</span><br/>" unless @team.found_time.nil?%>
   <%= "<span>球队风格: #{h @team.style}</span><br/>" unless @team.style.blank?%>
   <%if !@team.summary.blank?%>
       <label>球队简介：</label>
-      <p><%=simple_format auto_link(@team.summary, :urls)%></p>
+      <p><%=simple_format auto_link(h(@team.summary), :urls)%></p>
   <%end%>
   </div>
   
   <div style="margin: 10px 0 0 10px">
     <%if logged_in? %>
-    <%if current_user.is_team_member_of?(@team)%>
-      <%= link_to("退出球队", team_join_path(@user_team.id),:method=>:delete)%>
-    <%else%>
-      <%= link_to("申请加入球队", '#', :onclick=>'javascript:j("#send_team_join_request_div").dialog("open");return false;')%>
-    <%end%>
-    <%end%>
-    <%if logged_in? && current_user.is_team_admin_of?(@team)%>
-      <%= link_to("邀请朋友加入", new_team_team_join_invitation_path(@team))%>
-    <%end%>
-    <%if logged_in? && current_user.can_invite_team?(@team) %>
-      <%=link_to("邀请该队进行比赛", new_match_invitation_path(:guest_team_id=>@team))%>
+      <%if @can_quit%>
+        <%= link_to("退出球队", team_join_path(@user_team.id),:method=>:delete)%>
+      <%elsif @can_request%>
+        <%= link_to("申请加入球队", '#', :onclick=>'javascript:j("#send_team_join_request_div").dialog("open");return false;')%>
+      <%end%>
+      <%if current_user.is_team_admin_of?(@team)%>
+        <%= link_to("邀请朋友加入", new_team_team_join_invitation_path(@team))%>
+      <%end%>
+      <%if current_user.can_invite_team?(@team) %>
+        <%=link_to("邀请该队进行比赛", new_match_invitation_path(:guest_team_id=>@team))%>
+      <%end%>
     <%end%>
   </div>
 </div>
 
-<%if logged_in? && !current_user.is_team_member_of?(@team)%>
+<%if @can_request%>
 <div id="send_team_join_request_div" class="jdialog">
   <% form_for :team_join_request, :url => team_join_requests_path, :method=>"POST" do |f| %>
     <%= f.hidden_field :team_id,  :value=>@team.id%> 
@@ -82,8 +91,13 @@
 </div>
 <%end%>
 
-<h1><%=h @team.shortname%>最近的比赛</h1>
-<%= render(:partial => 'shared/match_list', :object => @matches, :locals=>{:current_team_id=>@team.id})%>                      
+<%if @matches.length > 0%>
+<div class="seperateLine clearBoth"></div>
+<div style="margin-bottom:20px">
+<h2><%=h @team.shortname%>最近的比赛</h2>
+<%= render(:partial => 'shared/match_list', :object => @matches, :locals=>{:current_team_id=>@team.id})%>
+</div>
+<%end%>
 
 <div class="seperateLine clearBoth"></div>
 <div style="margin-bottom:20px">        
