--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -6,7 +6,7 @@
 <div class="seperateLine"></div>
 
 <%= error_messages_for :message %>
-<% form_for :message, :url => messages_path do |f| %>
+<% form_for @message do |f| %>
   <table class="form">
     <tr>
       <td>写给:</td>
@@ -26,7 +26,7 @@
     <tr>
       <td></td>
       <td>
-        <%= f.hidden_field :receiver_id,  :value=>@receiver.id%>
+        <%= f.hidden_field :receiver_id %>
         <%= submit_tag '发送' %>
       </td>
     </tr>
