--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -1,14 +1,17 @@
-<div style="padding:10px">
-<%=small_user_image_link(post.user, :style=>'float:left; margin:0 10px 10px 0;')%>
+<div class="post">
+<%=small_user_image_link(post.user)%>
 
-<span>
-<%=h post.created_at.strftime('%Y-%m-%d %H:%M:%S')%> 来自<%=link_to h(post.user.nickname), user_view_path(post.user.id) %>
+<span class="title">
+<%=h post.created_at.strftime('%Y-%m-%d %H:%M:%S')%>
+<span class="name">来自<%=link_to h(post.user.nickname), user_view_path(post.user.id) %></span>
 </span>
+
 <p>
-  <%=simple_format auto_link(post.content, :urls) %>
+  <%=simple_format auto_link(h(post.content), :urls) %>
 </p>
 
-<div style="float:right; margin-right:20px">
+<%if logged_in?%>
+<div class="control">
 <%if post.is_a?(Post)%>
   <%= link_to '修改', edit_post_path(post) if post.can_be_modified_by?(current_user)%>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
   <%= link_to "删除", post_path(post.id), :method=>"delete" if post.can_be_destroyed_by?(current_user) %>
@@ -16,5 +19,6 @@
   <%= link_to "删除", post_reply_path(parent, post.id), :method=>"delete" if post.can_be_destroyed_by?(current_user) %>
 <%end%>
 </div>
+<%end%>
 
 </div>
