--- a/app/views/shared/_user_icon.html.erb
+++ b/app/views/shared/_user_icon.html.erb
@@ -1,4 +1,4 @@
 <div class="icon">
   <%=small_user_image_link user_icon%>
-  <span><%=link_to user_icon.nickname, user_view_path(user_icon.id)%></span>
+  <span><%=link_to h(user_icon.nickname), user_view_path(user_icon.id)%></span>
 </div>
