--- a/app/views/match_invitations/edit.html.erb
+++ b/app/views/match_invitations/edit.html.erb
@@ -17,9 +17,9 @@
   <p>
     <b>开始时间</b>
     <%= f.datetime_select :new_start_time %>
-    <%if( !@match_invitation.start_time.nil? && (@match_invitation.start_time!=@match_invitation.new_start_time))%>
+    <%if @match_invitation.has_attribute_been_modified?(:start_time)%>
         (我队上次的设定是：
-        <%= h(@match_invitation.start_time) %>  
+        <%= @match_invitation[:start_time].to_s(:db) %>  
         )
     <%end%>
   </p>
@@ -27,7 +27,7 @@
   <p>
     <b>地点</b>
     <%= f.text_field :new_location %>
-    <%if(!@match_invitation.location.nil? && (@match_invitation.location!=@match_invitation.new_location))%>
+    <%if @match_invitation.has_attribute_been_modified?(:location)%>
         (我队上次的设定是：
         <%= h(@match_invitation.location) %>  
         )
@@ -37,7 +37,7 @@
   <p>
     <b>比赛简介</b><br />
     <%= f.text_area :new_description %>
-    <%if(!@match_invitation.description.nil? && (@match_invitation.description!=@match_invitation.new_description))%>
+    <%if @match_invitation.has_attribute_been_modified?(:description)%>
         (我队上次的设定是：
         <%= h(@match_invitation.description) %>
         )
@@ -48,7 +48,7 @@
   <p>
     <b>比赛类型</b>
     <%= f.select :new_match_type, MatchInvitation::MATCH_TYPES.map {|t| [match_type_text(t), t]} %>
-    <%if(!@match_invitation.match_type.nil? && (@match_invitation.match_type!=@match_invitation.new_match_type))%>
+    <%if @match_invitation.has_attribute_been_modified?(:match_type)%>
         (我队上次的设定是：
         <%= h(@match_invitation.match_type) %>  
         )
@@ -58,7 +58,7 @@
   <p>
     <b>参加人数</b>
     <%= f.select :new_size, MatchInvitation::MATCH_SIZES %>
-    <%if(!@match_invitation.size.nil? && (@match_invitation.size!=@match_invitation.new_size))%>
+    <%if @match_invitation.has_attribute_been_modified?(:size)%>
         (我队上次的设定是：
         <%= h(@match_invitation.size) %>  
         )
@@ -68,7 +68,7 @@
   <p>
     <b>有裁判</b><br />
     <%= f.check_box :new_has_judge %>
-    <%if(!@match_invitation.has_judge.nil? && (@match_invitation.has_judge!=@match_invitation.new_has_judge))%>
+    <%if @match_invitation.has_attribute_been_modified?(:has_judge)%>
         (我队上次的设定是：
         <%= h(@match_invitation.has_judge) %>  
         )
@@ -78,7 +78,7 @@
   <p>
     <b>有红黄牌</b><br />
     <%= f.check_box :new_has_card %>
-    <%if(!@match_invitation.has_card.nil? && (@match_invitation.has_card!=@match_invitation.new_has_card))%>
+    <%if @match_invitation.has_attribute_been_modified?(:has_card)%>
         (我队上次的设定是：
         <%= h(@match_invitation.has_card) %>  
         )
@@ -88,7 +88,7 @@
   <p>
     <b>有越位</b><br />
     <%= f.check_box :new_has_offside %>
-    <%if(!@match_invitation.has_offside.nil? && (@match_invitation.has_offside!=@match_invitation.new_has_offside))%>
+    <%if @match_invitation.has_attribute_been_modified?(:has_offside)%>
         (我队上次的设定是：
         <%= h(@match_invitation.has_offside) %>  
         )
@@ -98,7 +98,7 @@
   <p>
     <b>上下半场各</b><br />
     <%= f.text_field :new_half_match_length %>分钟
-    <%if(!@match_invitation.half_match_length.nil? && (@match_invitation.half_match_length!=@match_invitation.new_half_match_length))%>
+    <%if @match_invitation.has_attribute_been_modified?(:half_match_length)%>
         (我队上次的设定是：
         <%= h(@match_invitation.half_match_length) %>分钟 
         )
@@ -108,7 +108,7 @@
   <p>
     <b>中场休息</b><br />
     <%= f.text_field :new_rest_length %>分钟
-    <%if(!@match_invitation.rest_length.nil? && (@match_invitation.rest_length!=@match_invitation.new_rest_length))%>
+    <%if @match_invitation.has_attribute_been_modified?(:rest_length)%>
         (我队上次的设定是：
         <%= h(@match_invitation.rest_length) %>分钟 
         )
@@ -118,7 +118,7 @@
   <p>
     <b>决胜规则</b><br />
     <%= f.select :new_win_rule, MatchInvitation::WIN_RULES.map {|r| [win_rule_text(r), r]} %>
-    <%if(!@match_invitation.win_rule.nil? && (@match_invitation.win_rule!=@match_invitation.new_win_rule))%>
+    <%if @match_invitation.has_attribute_been_modified?(:win_rule)%>
         (我队上次的设定是：
         <%= h(@match_invitation.win_rule) %>
         )
