--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,10 +8,17 @@
 <div id="narrow_right_content">
 <div class="seperateLine"></div>
 
-<% if @team %>
-  <%= link_to '发言', new_team_post_path(@team) %>
-<% elsif @training %>
-  <%= link_to '发言', new_training_post_path(@training) %>
-<%end%>
+<ul class="sidebar_menu">
+  <%if logged_in? && current_user.is_team_member_of?(@team)%>
+    <li>
+    >
+    <% if @training %>
+      <%= link_to '发言', new_training_post_path(@training) %>
+    <% elsif @team %>
+      <%= link_to '发言', new_team_post_path(@team) %>
+    <%end%>
+    </li>
+  <%end%>
+</ul>
 </div>
 <div class="clearBoth"></div>
