--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -14,11 +14,11 @@
 <div class="control">
 <%if post.is_a?(Post)%>
   <%if post.can_be_modified_by?(current_user)%>
-    <%= link_to '修改', edit_post_path(post) %>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-    <%= link_to "删除", post_path(post.id), :method=>"delete" if post.can_be_destroyed_by?(current_user) %>
+    > <%= link_to '修改', edit_post_path(post) %>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+    > <%= link_to "删除", post_path(post.id), :method=>"delete" if post.can_be_destroyed_by?(current_user) %>
   <%end%>
 <%elsif post.is_a?(Reply)%>
-  <%= link_to "删除", post_reply_path(parent, post.id), :method=>"delete" if post.can_be_destroyed_by?(current_user) %>
+  > <%= link_to "删除", post_reply_path(parent, post.id), :method=>"delete" if post.can_be_destroyed_by?(current_user) %>
 <%end%>
 </div>
 <%end%>
