--- a/app/views/team_join_requests/index_user.html.erb
+++ b/app/views/team_join_requests/index_user.html.erb
@@ -1,14 +1,43 @@
-<h1>申请加入<%=h @team.shortname%>的用户</h1>
+<h1><%=h @title%></h1>
+<div id="wide_left_content">
+<div class="seperateLine"></div>
 
-<% for req in @requests %>
-  <div>
-    <%= render :partial => "shared/user_icon", :object => req.user%>
-    <span>申请日期: <%= req.apply_date.to_s(:db) %></span><br/>
-    <%if !req.message.nil? && !req.message.blank?%>
-      <span>留言: </span>
-      <p><%=simple_format h(req.message)%></p>
-    <%end%>
-    <%= link_to '接受', team_joins_path(:id=>req.id, :back_uri => request.request_uri), :method => :post %>
-    <%= link_to '拒绝', team_join_request_path(req.id), :method => :delete %>
-  </div>
-<% end %>
+<table class="list">
+  <tr>
+    <th style="width:70px">&nbsp;</th>
+    <th style="width:70px">申请时间</th>
+    <th style="width:300px">留言</th>
+    <th style="width:100px">&nbsp;</th>
+  </tr>
+  <% for req in @requests %>
+    <tr>
+      <td><%= small_user_image_link req.user%></td>
+      <td><%=req.apply_date.to_s(:db) %></td>
+      <td>
+        <%= link_to h(req.user.nickname), user_view_path(req.user) %>申请加入<%= link_to h(req.team.shortname), team_view_path(req.team) %>
+        <br/><br/>
+        <%if !req.message.blank?%>
+          <%= friend_inv.applier.gender == 2 ? '她' : '他'%>留言:
+          <%= h(req.message) %>
+          <br/><br/>
+        <%end%>
+      </td>
+      <td>
+        <%= button_to '同意', team_joins_path(:id=>req.id, :back_uri => request.request_uri), :method => :post %>
+        <%= button_to '拒绝', team_join_request_path(req.id), :method => :delete %>
+      </td>
+    </tr>
+  <% end %>
+</table>
+  
+</div>
+
+<div id="narrow_right_content">
+<div class="seperateLine"></div>
+<ul class="sidebar_menu">
+  <li>
+  > <%= link_to("球队邀请加入的用户", team_team_join_invitations_path(@team)) %>
+  </li>
+</ul>
+</div>
+<div class="clearBoth"></div>
