--- a/app/views/layouts/training_layout.html.erb
+++ b/app/views/layouts/training_layout.html.erb
@@ -10,7 +10,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title><%=h @title ? @title : h("#{@training.team.shortname} #{@training.start_time.strftime('%m月%d日')}的训练")%></title>
+  <title><%=h @title ? @title : h("#{@training.team.shortname} #{@training.start_time.strftime('%m.%d')}的训练")%></title>
   <%= javascript_include_tag "jquery-1.2.3.min.js" %>
   <%= javascript_include_tag "application" %>
   <%= yield :javascript%>
@@ -21,11 +21,10 @@
 <div id="main_content">
 <div id="header">
   <%= link_to team_image_tag(@training.team), team_view_path(@training.team), :id=>"header_icon" %>
-  <div id="header_name" style="margin-top:-10px">
-    <%= link_to h(@training.team.shortname), team_view_path(@training.team)%>
-    <br/>
-    <%= link_to h("#{@training.start_time.strftime('%m月%d日')}的训练"), 
-           training_view_path(@training), :style=>"margin-left:20px; font-size:16px"%>
+  <div id="header_name">
+    <%= link_to h(@training.team.shortname), team_view_path(@training.team)%> 
+    <%= link_to h("#{@training.start_time.strftime('%m.%d')}的训练"), 
+           training_view_path(@training), :style=>"font-size:smaller"%>
   </div>
 
   <%= render(:partial => 'shared/header_setting')%>
