--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,5 +1,6 @@
 <div id="narrow_right_content">
 <div class="seperateLine"></div>
+<%=render :partial=>'sidebar_menu'%>
 </div>
 
 <div id="wide_left_content">
