--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,5 @@
 <h1><%=h @title%></h1>
+<div id="wide_left_content">
 <div class="seperateLine"></div>
 <%= error_messages_for :post%>
 
@@ -8,3 +9,15 @@
     <%= f.submit "修改" %>
   </p>
 <% end %>
+</div>
+
+<div id="narrow_right_content">
+<div class="seperateLine"></div>
+
+<ul class="sidebar_menu">
+  <li>
+    > <%= link_to '返回帖子', post_path(@post) %>
+  </li>
+</ul>
+</div>
+<div class="clearBoth"></div>
