--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,4 +18,41 @@
   <% end %>
 <%end%>
 </div>
+
+<div id="narrow_right_content">
+<div class="seperateLine"></div>
+
+<ul class="sidebar_menu">
+  <li>
+    > <% if @training %>
+      <%= link_to '返回讨论区', training_posts_path(@training) %>
+    <% elsif @team %>
+      <%= link_to '返回讨论区', team_posts_path(@team) %>
+    <%end%>
+  </li>
+  <li>
+    > <% if @training %>
+      <%= link_to '发言', new_training_post_path(@training) %>
+    <% elsif @team %>
+      <%= link_to '发言', new_team_post_path(@team) %>
+    <%end%>
+  </li>
+</ul>
+
+<div class="seperateLine"></div>
+<h2>其他话题</h2>
+<table class="list" style="width:90%">
+  <tr>
+    <th style="width:20%">作者</th>
+    <th style="width:80%">话题</th>
+  </tr>
+
+<% for post in @related_posts %>
+  <tr>
+    <td><%=h post.user.nickname %></td>
+    <td><%=link_to h(post.title), post  %></td>
+  </tr>
+<% end %>
+</table>
+</div>
 <div class="clearBoth"></div>
