--- a/app/views/team_join_invitations/index_team.html.erb
+++ b/app/views/team_join_invitations/index_team.html.erb
@@ -1,14 +1,46 @@
-<h1>邀请我加入的球队</h1>
+<h1><%=h @title%></h1>
+<div id="wide_left_content">
+<div class="seperateLine"></div>
 
-<% for req in @requests %>
-  <div>
-    <%= render :partial => "shared/team_icon", :object => req.team%>
-    <span>申请日期: <%= req.apply_date.to_s(:db) %></span><br/>
-    <%if !req.message.nil? && !req.message.blank?%>
-      <span>留言: </span>
-      <p><%=simple_format h(req.message)%></p>
-    <%end%>
-    <%= link_to '接受', team_joins_path(:id=>req.id, :back_uri => request.request_uri), :method => :post %>
-    <%= link_to '拒绝', team_join_invitation_path(req.id), :method => :delete %>
-  </div>
-<% end %>
+<table class="list">
+  <tr>
+    <th style="width:70px">&nbsp;</th>
+    <th style="width:70px">邀请时间</th>
+    <th style="width:300px">留言</th>
+    <th style="width:100px">&nbsp;</th>
+  </tr>
+  <% for req in @requests %>
+    <tr>
+      <td><%= small_team_image_link req.team%></td>
+      <td><%=req.apply_date.to_s(:db) %></td>
+      <td>
+        <%= link_to h(req.team.shortname), team_view_path(req.team) %>邀请你加入
+        <br/><br/>
+        <%if !req.message.blank?%>
+          管理员留言:
+          <%= h(req.message) %>
+          <br/><br/>
+        <%end%>
+      </td>
+      <td>
+        <%= button_to '接受', team_joins_path(:id=>req.id, :back_uri => request.request_uri), :method => :post %>
+        <%= button_to '拒绝', team_join_invitation_path(req.id), :method => :delete %>
+      </td>
+    </tr>
+  <% end %>
+</table>
+  
+</div>
+
+<div id="narrow_right_content">
+<div class="seperateLine"></div>
+<ul class="sidebar_menu">
+  <li>
+  > <%= link_to("希望和我成为朋友的用户", friend_invitations_path) %>
+  </li>
+  <li>
+  > <%= link_to("我申请加入的球队", team_join_requests_path) %>
+  </li>
+</ul>
+</div>
+<div class="clearBoth"></div>
