--- a/app/views/team_join_invitations/new_by_user_id.html.erb
+++ b/app/views/team_join_invitations/new_by_user_id.html.erb
@@ -1,27 +1,23 @@
-<div>
-  <h1>加入球队邀请</h1>
-</div>
+<h1><%=h @title%></h1>
+<div class="seperateLine" style="margin-bottom:20px"></div>
 
-<%if !@teams.empty?%>
-  <%= error_messages_for :team_join_request %>
-
-  <% form_for :team_join_request, :url => team_join_invitations_path, :method=>"POST" do |f| %>
-      <%= f.hidden_field :user_id,  :value=>@user.id%>    
-
-    <p>
-      <b>球队</b><br />
-      <%= f.select :team_id, @teams.map{|t| [t.shortname,t.id]} %>
-    </p>
-
-    <p>
-      <b>留言</b><br />
-      <%= f.text_area :message %>
-    </p>  
-
-    <p>
-      <%= f.submit "邀请" %>
-    </p>
-  <% end %>
+<%if @teams.empty?%>
+  <span>没有可以邀请加入的球队，可能这个用户已经加入了所有你管理的球队</span>
 <%else%>
-    <span>加无可加</span>
+  <% form_for :team_join_request, :url => team_join_invitations_path, :method=>"POST" do |f| %>
+    <%= f.hidden_field :user_id,  :value=>@user.id%>    
+
+    <%@teams.each do |team|%>
+      <div class="icon_select">
+        <%= render(:partial => 'shared/team_icon', :object => team)%>
+        <div class="input"><%= check_box_tag "teams_id[]", team.id%></div>
+      </div>
+    <%end%>
+    <div class="clearBoth"></div>
+
+    <span>留言</span><br />
+    <%= f.text_area :message, :cols => 40, :rows => 3 %><br />
+    <%= f.submit "邀请" %><br />
+  <% end %>
+
 <%end%>
