--- a/app/views/team_joins/index_team.html.erb
+++ b/app/views/team_joins/index_team.html.erb
@@ -1,5 +1,5 @@
 <h1><%= h @title%></h1>
-<div class="seperateLine" style="margin-bottom:20px"></div>
+<div class="seperateLine"></div>
 
 <%if @admin_teams.length > 0%>
 <h2><%= h "#{@user.nickname}管理的球队"%></h2>
