--- a/app/views/training_views/show.html.erb
+++ b/app/views/training_views/show.html.erb
@@ -6,25 +6,30 @@
 <h1><%=h @title%></h1>
 <div id="wide_left_content">
 <div class="seperateLine"></div>
+
 <div style="margin-bottom:20px">
-<div class="activity" style="border:none; margin: 10px 40px 10px 0px;">
+<div class="activity" style="border:none;">
   <div class="activity_date">
     <div class="day">
       <%= month_calendar_link(@training.start_time.strftime('%m'), @training.start_time)%>.<%= month_day_link(@training.start_time.day, @training.start_time)%></div>
     <div class="week"><%= wday_text @training.start_time.wday%></div>
   </div>
   <div class="activity_content">
-    <%= @training.start_time.strftime('%H:%M')%>-<%= @training.end_time.strftime('%H:%M')%>,
-    <%= link_to_if !@training.football_ground_id.nil?, h(@training.location), football_ground_path(@training.football_ground_id)%>,
-    <%= link_to(@training.team.shortname, team_view_path(@training.team.id))%>训练
+    队伍: <%= link_to(@training.team.shortname, team_view_path(@training.team.id))%>
+    <br/><br/>
+    时间: <%= @training.start_time.strftime('%H:%M')%>-<%= @training.end_time.strftime('%H:%M')%>
+    <br/><br/>
+    场地: <%= link_to_if !@training.football_ground_id.nil?, h(@training.location), football_ground_path(@training.football_ground_id)%>
     <br/><br/>
     <%if logged_in? %>
       <%=link_to_if(@training.can_be_joined_by?(current_user), '我去', training_training_joins_path(@training), :method=>'post'){} %>
       <%=link_to_if(@training.has_member?(current_user), '我不去', training_training_join_path(@training, 0), :method=>'delete'){} %>
     <%end%>
     <%if logged_in? && current_user.is_team_admin_of?(@training.team)%>
-      <%=link_to '修改', edit_training_path(@training)%>
-      <%=link_to '删除', training_path(@training), :method=>'delete'%>
+      <div style="float:right">
+        > <%=link_to '修改', edit_training_path(@training)%>&nbsp;&nbsp;|&nbsp;&nbsp;
+        > <%=link_to '删除', training_path(@training), :method=>'delete'%>
+      </div>
     <%end%>
   </div>
   <div class="activity_icon">
@@ -32,8 +37,9 @@
   </div>
   <div class="clearBoth"></div>
 </div>
+
 <%if !@training.summary.blank?%>
-  <div class="tab_container" style="margin:10px 0 10px 0">
+  <div class="tab_container">
   <span class="tab_link" style="margin-left: 10px;">本次训练说明</span>
   <div class="tab">
     <p><%=simple_format auto_link(h(@training.summary), :urls)%></p>
@@ -45,11 +51,11 @@
   <div style="margin-bottom:20px">
     <h2>关于本次训练的讨论</h2>
     <%= render(:partial => 'shared/post_list', :object => @posts)%>
-    <div style="margin: 10px 0  0 10px;">
+    <div style="margin: 5px 10px  0 10px;float:right">
       <%if logged_in? && current_user.is_team_member_of?(@training.team)%>
-        <%= link_to '发言', new_training_post_path(@training) %>
+        > <%= link_to '发言', new_training_post_path(@training) %>
       <%end%>
-      <%= link_to '更多', training_posts_path(@training) %>
+      > <%= link_to '更多', training_posts_path(@training) %>
     </div>
   </div>
 </div>
