--- a/public/stylesheets/wefootball.css
+++ b/public/stylesheets/wefootball.css
@@ -86,11 +86,11 @@ table th{ text-align: left; }
 }
 
 #content {
-    margin: 20px 30px 20px 30px;
+    margin: 20px 15px 20px 25px;
 }
 
 #left_content {
-    width:330px; float:left;
+    width:310px; float:left;
 }
 
 #right_content {
@@ -151,8 +151,31 @@ table.list td{
     vertical-align: top;
 }
 
+table.list td p{
+    margin: 5px;
+    padding: 0px;
+    text-indent: 2em;
+}
+
+
+table.list td form{
+    float: left;
+    margin: 5px;
+    padding: 0px;
+}
+
 table.form td{
     vertical-align: top;
+}
+
+div.notification {
+    background: #F2F7AB;
+    padding: 6px 10px;
+    margin: 10px 0px 15px 0px;
+}
+
+div.tab_container {
+    margin-bottom:10px;
 }
 
 .tab {
@@ -205,11 +228,15 @@ div.post {
 }
 
 div.post img {
-    float:left; margin:0 10px 10px 0;
+    float:left; margin:0 15px 10px 0;
+}
+
+div.post p{
+    text-indent: 2em;
 }
 
 div.post .title {
-    background-color:#F2F7AB; 
+    background-color:#EEEEFF; 
     padding: 2px 250px 2px 10px;
 }
 
@@ -219,4 +246,45 @@ div.post .title .name{
 
 div.post .control {
     float:right; margin-right:20px
+}
+
+ul.sidebar_menu {
+    padding : 0px;
+    margin : 10px 0px;
+}
+
+ul.sidebar_menu li{
+    list-style-type: none;
+    margin: 5px 5px 20px 5px;
+}
+
+ul.sidebar_menu li,
+ul.sidebar_menu li a{
+    font-size: 14.8px;
+}
+
+div.icon_select {
+    float:left
+}
+div.icon_select div.icon {
+    margin-right:0px
+}
+div.icon_select div.input {
+    padding-top:40px;
+    float:left
+}
+
+div.ui-dialog {
+    background: #fff;
+    padding: 8px 10px 20px 10px;
+    border:solid 2px #3D681A;
+}
+
+div.ui-dialog div.ui-dialog-titlebar{
+    text-align: right;
+}
+
+div.ui-dialog form{
+    padding: 0px;
+    margin: 0px;
 }
